
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int seed ;


 int O_RDONLY ;
 int close (int) ;
 int open (char*,int ) ;
 int perror (char*) ;
 int read (int,long*,int) ;
 int srand48 (long) ;

int seed_random(void) {
 int fp;
 long seed;

 fp = open("/dev/random", O_RDONLY);
 if (fp < 0) {
  perror("/dev/random");
  return 0;
 }

 if (read(fp, &seed, sizeof(seed)) != sizeof(seed)) {
  perror("read random seed");
  return 0;
 }

 close(fp);
 srand48(seed);

 return 1;
}
